--- a/src/app/features/posts/posts.html
+++ b/src/app/features/posts/posts.html
@@ -50,7 +50,7 @@
               </div>
             </div>
 
-            <!-- author section -->
+
             <div class="position-relative">
               <label class="form-label smallest tracking-tight fw-medium text-muted">Co-Editors</label>
               <div
@@ -86,19 +86,24 @@
               }
             </div>
 
-            <!-- author section -->
-
             <div class="form-check form-switch py-1">
               <input class="form-check-input" type="checkbox" id="isPublic" formControlName="isPublic" />
               <label class="form-check-label smallest fw-medium ms-2" for="isPublic">
-                {{ addPostForm.value.isPublic ? 'Publicly Visible' : 'Draft (Private)' }}
+                {{ addPostForm.value.isPublic ? 'Public' : 'Private' }}
               </label>
             </div>
 
-            <button type="submit" [disabled]="addPostForm.invalid"
-              class="btn btn-primary w-100 py-2 shadow-sm rounded fw-bold small">
-              Publish Post
-            </button>
+            <div class="d-flex gap-2 mt-2">
+              <button type="button" (click)="onSaveDraft()" [disabled]="addPostForm.invalid || isUploading"
+                class="btn btn-light btn-save-draft flex-grow-1 py-2 rounded fw-bold small text-muted border">
+                <i class="bi bi-archive me-1"></i> Save Draft
+              </button>
+
+              <button type="submit" [disabled]="addPostForm.invalid || isUploading"
+                class="btn btn-primary flex-grow-1 py-2 shadow-sm rounded fw-bold small">
+                Publish Post
+              </button>
+            </div>
           </form>
         </div>
       </div>
@@ -132,28 +137,6 @@
                       </button>
                     </div>
                   </div>
-
-                  <div class="d-flex align-items-center mt-2 pt-2 ">
-                    <span class="metadata-item">
-                      <i class="bi bi-clock-history me-1"></i>
-                      Updated 2h ago
-                    </span>
-                  </div>
-
-                  <div class="d-flex justify-content-end mt-2 pe-2 gap-2">
-                    <div class="avatar-group d-flex align-items-center">
-                      <span class="smallest text-muted fw-medium">+2 editors</span>
-                      <div class="co-author-circle shadow-sm ms-2" [title]="'Bill'">
-                        <img [src]="'https://www.gravatar.com/avatar/?d=mp&s=150'" [alt]="'Elise'" class="avatar-img">
-                        <!-- @else {
-                                <span class="avatar-initials">N</span>
-                              } -->
-                      </div>
-                    </div>
-
-                  </div>
-
-
                 </div>
               </app-post-card>
             </div>
