--- a/src/app/features/profile/profile.html
+++ b/src/app/features/profile/profile.html
@@ -4,16 +4,22 @@
     @if(profile()){
     <section class="profile-card">
       <div class="profile-cover"></div>
-      <div class="profile-content text-center">
-        <div class="avatar-wrapper">
-          <img [src]="'https://www.gravatar.com/avatar/?d=mp&s=150'" class="profile-avatar shadow" alt="Avatar">
-          <span class="status-indicator online"></span>
+      <div class="profile-content text-center d-flex flex-column justify-content-center">
+        <div class="avatar-wrapper align-self-center">
+          @if (profile()) {
+          <img [src]="profile()!.avatar" class="profile-avatar shadow" alt="Avatar">
+          <span class="status-indicator online animate-fade-in"></span>
+          } @else {
+          <div class="profile-avatar glass-loading"></div>
+          }
         </div>
-        <h3 class="fw-bold mt-2 mb-1">{{ profile()?.name }}</h3>
-        <p class="text-muted mb-2 small">{{ profile()?.bio }}</p>
-        <div class="d-flex justify-content-center gap-2">
-          <button class="btn btn-primary btn-sm px-4 rounded-pill">Edit Profile</button>
-          <button class="btn btn-light btn-sm px-3 rounded-circle"><i class="bi bi-share"></i></button>
+        <div class="mt-3">
+          <h3 class="fw-bold mt-2 mb-1">{{ profile()?.name }}</h3>
+          <p class="text-muted mb-2 small">{{ profile()?.bio }}</p>
+          <div class="d-flex justify-content-center gap-2">
+            <button class="btn btn-primary btn-sm px-4 rounded-pill">Edit Profile</button>
+            <button class="btn btn-light btn-sm px-3 rounded-circle"><i class="bi bi-share"></i></button>
+          </div>
         </div>
       </div>
     </section>
@@ -76,7 +82,7 @@
   <!-- Right Sidebar -->
   <aside class="right-sidebar-wrapper">
 
-    <div class="sidebar-section mb-4">
+    <div class=" mb-4">
       @if(profile()){
       <div class="stats-mini-grid animate-fade-in">
         @for (stat of [
