--- a/src/app/shared/ui/post-card/post-card.html
+++ b/src/app/shared/ui/post-card/post-card.html
@@ -9,7 +9,8 @@
     <h6 class="post-title mb-2">{{ post().title }}</h6>
     <p class="post-description text-muted small flex-grow-1">{{ post().description }}</p>
 
-    <div class="card-footer-actions d-flex justify-content-between align-items-center w-100 mt-3 pt-3 border-top border-light-subtle">
+    <div
+      class="card-footer-actions d-flex justify-content-between align-items-center w-100 mt-3 pt-3 border-top border-light-subtle">
       <div class="author-info d-flex align-items-center">
         <img src="https://i.pravatar.cc/150?u=niki" class="author-avatar rounded-circle me-2" alt="author">
         <div class="d-flex flex-column">
@@ -26,8 +27,28 @@
     <strong class="d-block">{{ post().title }}</strong>
     <p class="small text-muted mb-0">{{ post().description }}</p>
   </div>
-  <div class="d-flex gap-2 align-items-center w-30">
+  <div class="d-flex flex-column gap-2 align-items-center w-30">
     <ng-container *ngTemplateOutlet="actionRef"></ng-container>
+    <div>
+    <div class="d-flex align-items-center pe-2">
+      <span class="metadata-item">
+        <i class="bi bi-clock-history me-1"></i>
+        Updated 2h ago
+      </span>
+    </div>
+
+    <div class="d-flex justify-content-end pe-2 gap-2">
+      <div class="avatar-group d-flex align-items-center">
+        <span class="smallest text-muted fw-medium">+2 editors</span>
+        <div class="co-author-circle shadow-sm ms-2" [title]="'Bill'">
+          <img [src]="'https://www.gravatar.com/avatar/?d=mp&s=150'" [alt]="'Elise'" class="avatar-img">
+          <!-- @else {
+                                <span class="avatar-initials">N</span>
+                              } -->
+        </div>
+      </div>
+    </div>
+    </div>
   </div>
 </div>
 }
