added global in-app notification system

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,9 +7,10 @@
 
   <div class="app-shell">
     <app-header></app-header>
-
     <main class="app-main">
       <router-outlet />
     </main>
   </div>
+
+  <app-notification></app-notification>
 </div>
