--- a/src/app/backup/home-old.css
+++ b/src/app/backup/home-old.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,800;1,900&display=swap'); */
 
 .container-fluid {
   padding-left: 50px;
